AC_PREREQ([2.69])
AC_INIT([minischeme], [0.1.0], [jan@wedesoft.de])
AM_INIT_AUTOMAKE([--warnings=no-portability foreign])
AC_CONFIG_MACRO_DIR([m4])
LT_INIT
AC_PROG_CC
AC_PROG_INSTALL
AC_LANG(C)
AC_PROG_LN_S
AM_PROG_LIBTOOL
AM_CONFIG_HEADER(config.h)
AC_CHECK_HEADERS([ctype.h stdbool.h stdlib.h string.h stdio.h])
AC_OUTPUT(Makefile)
